@@ -47,19 +47,43 @@ struct FfmpegInput::Handle {
         : formatContext(0)
         , codecContext(0)
         , codec(0)
+        #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT(53, 35, 0)
+        , frame(0)
+        #endif
         , audioStream(0)
         , currentBytes(0) {
         av_init_packet(&packet);
         audioBuffer = (int16_t*)av_malloc(BUFFER_SIZE);
+        #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT(53, 35, 0)
+        #if LIBAVCODEC_VERSION_INT < AV_VERSION_INT(55, 39, 101)
+        frame = avcodec_alloc_frame();
+        #else
+        frame = av_frame_alloc();
+        #endif
+        #endif
     }
     ~Handle() {
         if (audioBuffer) {
             av_free(audioBuffer);
         }
+        #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT(53, 35, 0)
+        if (frame) {
+            #if LIBAVCODEC_VERSION_INT <= AV_VERSION_INT(54, 23, 100)
+            av_free(&frame);
+            #elif LIBAVCODEC_VERSION_INT < AV_VERSION_INT(55, 39, 101)
+            avcodec_free_frame(&frame);
+            #else
+            av_frame_free(&frame);
+            #endif
+        }
+        #endif
     }
     AVFormatContext *formatContext;
     AVCodecContext *codecContext;
     AVCodec *codec;
+    #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT(53, 35, 0)
+    AVFrame *frame;
+    #endif
     AVPacket packet;
     int audioStream;
     int16_t *audioBuffer;
@@ -305,14 +329,9 @@ size_t FfmpegInput::readFrames()
 #if LIBAVCODEC_VERSION_INT >= AV_VERSION_INT(53, 35, 0)
 static int decodeAudio(FfmpegInput::Handle *handle, int *frame_size_ptr)
 {
-    #if LIBAVCODEC_VERSION_INT < AV_VERSION_INT(55, 39, 101)
-    AVFrame *frame = avcodec_alloc_frame();
-    #else
-    AVFrame *frame = av_frame_alloc();
-    #endif
     int ret, got_frame = 0;
 
-    if (!frame) {
+    if (!handle->frame) {
          return AVERROR(ENOMEM);
     }
 
@@ -323,23 +342,23 @@ static int decodeAudio(FfmpegInput::Handle *handle, int *frame_size_ptr)
     }
     #endif
 
-    ret = avcodec_decode_audio4(handle->codecContext, frame, &got_frame, &handle->packet);
+    ret = avcodec_decode_audio4(handle->codecContext, handle->frame, &got_frame, &handle->packet);
 
     if (ret >= 0 && got_frame) {
         int ch, plane_size;
         int planar = av_sample_fmt_is_planar(handle->codecContext->sample_fmt);
         int data_size = av_samples_get_buffer_size(&plane_size, handle->codecContext->channels,
-                                                   frame->nb_samples, handle->codecContext->sample_fmt, 1);
+                                                   handle->frame->nb_samples, handle->codecContext->sample_fmt, 1);
         if (*frame_size_ptr < data_size) {
             return AVERROR(EINVAL);
         }
 
-        memcpy(handle->audioBuffer, frame->extended_data[0], plane_size);
+        memcpy(handle->audioBuffer, handle->frame->extended_data[0], plane_size);
 
         if (planar && handle->codecContext->channels > 1) {
             uint8_t *out = ((uint8_t *)(handle->audioBuffer)) + plane_size;
             for (ch = 1; ch < handle->codecContext->channels; ch++) {
-                memcpy(out, frame->extended_data[ch], plane_size);
+                memcpy(out, handle->frame->extended_data[ch], plane_size);
                 out += plane_size;
             }
         }
@@ -348,17 +367,10 @@ static int decodeAudio(FfmpegInput::Handle *handle, int *frame_size_ptr)
         *frame_size_ptr = 0;
     }
 
-    #if LIBAVCODEC_VERSION_INT <= AV_VERSION_INT(54, 23, 100)
-    av_free(&frame);
-    #elif LIBAVCODEC_VERSION_INT < AV_VERSION_INT(55, 39, 101)
-    avcodec_free_frame(&frame);
-    #else
-    av_frame_free(&frame);
-    #endif
     return ret;
 }
 #endif
-
+#include <QDebug>
 size_t FfmpegInput::readOnePacket()
 {
     if (!handle) {
@@ -386,7 +398,6 @@ size_t FfmpegInput::readOnePacket()
     #else
     int len = avcodec_decode_audio2(handle->codecContext, handle->audioBuffer, &dataSize, handle->packet.data, handle->packet.size);
     #endif
-
     if (len < 0) {
         goto out;
     }
@@ -396,7 +407,7 @@ size_t FfmpegInput::readOnePacket()
         av_free_packet(&handle->packet);
         goto next_frame;
     }
-
+    qWarning() << handle->codecContext->sample_fmt;
     switch (handle->codecContext->sample_fmt) {
     #if LIBAVCODEC_VERSION_MAJOR >= 54
     case AV_SAMPLE_FMT_S16:
@@ -458,6 +469,48 @@ size_t FfmpegInput::readOnePacket()
     case SAMPLE_FMT_U8:
     case SAMPLE_FMT_NONE:
     case SAMPLE_FMT_NB:
+    #endif
+    #if LIBAVCODEC_VERSION_MAJOR >= 54
+    case AV_SAMPLE_FMT_S16P: {
+        uint8_t **ed = handle->frame->extended_data;
+        numberRead = handle->frame->nb_samples;
+        for (unsigned i = 0; i < handle->frame->nb_samples * channels(); ++i) {
+            int currentChannel = i / handle->frame->nb_samples;
+            int currentSample = i % handle->frame->nb_samples;
+            handle->buffer[currentSample * channels() + currentChannel] = ((float)((int16_t*) ed[currentChannel])[currentSample])/qMax(-(float)SHRT_MIN, (float)SHRT_MAX);
+        }
+        break;
+    }
+    case AV_SAMPLE_FMT_S32P: {
+        uint8_t **ed = handle->frame->extended_data;
+        numberRead = handle->frame->nb_samples;
+        for (unsigned i = 0; i < handle->frame->nb_samples * channels(); ++i) {
+            int currentChannel = i / handle->frame->nb_samples;
+            int currentSample = i % handle->frame->nb_samples;
+            handle->buffer[currentSample * channels() + currentChannel] = ((float) ((int32_t*) ed[currentChannel])[currentSample])/qMax(-(float)INT_MIN, (float)INT_MAX);
+        }
+        break;
+    }
+    case AV_SAMPLE_FMT_FLTP: {
+        uint8_t **ed = handle->frame->extended_data;
+        numberRead = handle->frame->nb_samples;
+        for (unsigned i = 0; i < handle->frame->nb_samples * channels(); ++i) {
+            int currentChannel = i / handle->frame->nb_samples;
+            int currentSample = i % handle->frame->nb_samples;
+            handle->buffer[currentSample * channels() + currentChannel] = ((float*) ed[currentChannel])[currentSample];
+        }
+        break;
+    }
+    case AV_SAMPLE_FMT_DBLP:{
+        uint8_t **ed = handle->frame->extended_data;
+        numberRead = handle->frame->nb_samples;
+        for (unsigned i = 0; i < handle->frame->nb_samples * channels(); ++i) {
+            int currentChannel = i / handle->frame->nb_samples;
+            int currentSample = i % handle->frame->nb_samples;
+            handle->buffer[currentSample * channels() + currentChannel] = ((double*) ed[currentChannel])[currentSample];
+        }
+        break;
+    }
     #endif
     default:
         numberRead=0;
